--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,21 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@reduxjs/toolkit": "^2.2.6",
     "6pp": "^1.2.16",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.24.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
