--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "6pp": "^1.2.16",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
