fixed frontend and backend url

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-VITE_SERVER=http://localhost:3000/api/v1
+VITE_SERVER=https://chat-app-uzs8.onrender.com/api/v1
+
+MYFRONTENDURL=https://chat-app-ruby-seven.vercel.app/
