fixed enviorment variables

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
 VITE_SERVER=https://chat-app-uzs8.onrender.com/api/v1
 
+NODE_ENV=production
+
 MYFRONTENDURL=https://chat-app-ruby-seven.vercel.app/
