fixed socket issue

--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,4 @@ VITE_SERVER=https://chat-app-uzs8.onrender.com/api/v1
 
 NODE_ENV=production
 
-MYFRONTENDURL=https://chat-app-ruby-seven.vercel.app/
+# MYFRONTENDURL=https://chat-app-ruby-seven.vercel.app/
